--- a/css/osmium-2.webflow.css
+++ b/css/osmium-2.webflow.css
@@ -2126,8 +2126,13 @@ figcaption {
   line-height: 26px;
 }
 
-.heading, .heading-2 {
+.heading {
   color: var(--real-os-blue);
+}
+
+.heading-2 {
+  color: var(--real-os-blue);
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 
 .text-block {
@@ -2140,7 +2145,16 @@ figcaption {
   text-align: left;
 }
 
-.text-block-2, .text-block-3 {
+.text-block-2 {
+  color: var(--real-os-blue);
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-size: 18px;
+}
+
+.text-block-3 {
   color: var(--real-os-blue);
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 18px;
@@ -2148,12 +2162,22 @@ figcaption {
 
 .image-2 {
   text-align: left;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .container-2 {
   text-align: left;
+}
+
+.cell {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.image-3 {
+  margin-top: auto;
 }
 
 @media screen and (max-width: 991px) {
