--- a/css/osmium-2.webflow.css
+++ b/css/osmium-2.webflow.css
@@ -26,7 +26,7 @@
   grid-row-gap: 20px;
   grid-column-gap: 20px;
   grid-auto-columns: 1fr;
-  justify-content: center;
+  justify-content: left;
   padding: 20px;
 }
 
