--- a/css/osmium2.webflow.css
+++ b/css/osmium2.webflow.css
@@ -2193,6 +2193,10 @@ figcaption {
   color: var(--real-os-blue);
 }
 
+.text-span {
+  color: #fff;
+}
+
 @media screen and (max-width: 991px) {
   .section.cc-product-detail {
     flex-direction: column;
