--- a/css/osmium2.webflow.css
+++ b/css/osmium2.webflow.css
@@ -6,6 +6,13 @@
   --white2: var(--white);
 }
 
+.w-layout-blockcontainer {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
 .w-layout-grid {
   grid-row-gap: 16px;
   grid-column-gap: 16px;
@@ -13,13 +20,6 @@
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
   display: grid;
-}
-
-.w-layout-blockcontainer {
-  max-width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
 }
 
 .w-layout-layout {
@@ -2195,6 +2195,19 @@ figcaption {
 
 .text-span {
   color: #fff;
+}
+
+.container-3 {
+  padding-top: 46px;
+}
+
+.text-block-5 {
+  color: #3beae4;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+}
+
+.text-span-2 {
+  color: #f1f1f8;
 }
 
 @media screen and (max-width: 991px) {
